# filesh

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  tests_helpers.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20260417_000001_initial_schema.py  20260417_000002_add_timestamp_defaults.py  20260417_000003_make_share_invited_user_optional.py  20260418_000004_add_share_token_ciphertext.py  20260420_000005_add_resource_search_indexes.py
backend/app/: main.py
backend/app/api/: errors.py  routes.py
backend/app/api/v1/: auth.py  files.py  folders.py  health.py  resources.py  share_access.py  users.py
backend/app/application/: dto.py  mappers.py  ports.py  types.py
backend/app/application/services/: __init__.py  files.py  folders.py  identity.py  shares.py
backend/app/application/shared/: auth.py  files.py  folders.py  presenters.py  resources.py  shares.py  users.py
backend/app/application/use_cases/: auth.py  base.py  files.py  (+4 more)
backend/app/core/: config.py  db.py  events.py  observability.py  security.py  storage.py  tracing.py
backend/app/dependencies/: auth.py  events.py  storage.py  use_cases.py
backend/app/domain/: __init__.py  enums.py  exceptions.py
backend/app/models/: __init__.py  entities.py  enums.py  file.py  folder.py  share.py  upload_session.py  user.py
backend/app/persistence/: uow.py
backend/app/repositories/: __init__.py  files.py  folders.py  shares.py  users.py
backend/app/schemas/: auth.py  file.py  folder.py  resource.py  share.py  user.py
backend/app/services/: auth.py  files.py  folders.py  shares.py
backend/app/workers/: cleanup.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_cleanup_workers.py  test_core.py  test_files.py  test_folders.py  test_health.py  test_models.py  test_observability.py  test_resources.py  test_shares.py
(+69 files in other folders)
